# jafar

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  Module.config.in  Module.rules  README  TODO  aclocal.m4  autogen.sh  configure  configure.ac
modules/: CMakeLists.txt
modules/helloworld/: Doxyfile  Makefile  README  User.make
modules/helloworld/doc/: helloworld.doxy  helloworld_new.tcl  helloworld_old.tcl
modules/helloworld/include/: helloworld.i  helloworldException.i  helloworldTools.i
modules/helloworld/include/helloworld/: helloWorld.hpp  helloworldException.hpp
modules/helloworld/macro/: demoHello.tcl  helloworld.rb
modules/helloworld/src/: helloWorld.cpp  helloworldException.cpp
modules/helloworld/src/ruby/: extconf.rb
modules/helloworld/test_suite/: test_suite_HelloWorldClass.hpp  test_suite_helloworld.cpp
modules/kernel/: CMakeLists.txt  Makefile  README  User.make
modules/kernel/doc/: demoDataLog.tcl  demoKeyValue.tcl  demoKeyValue.txt  kernel.doxy
modules/kernel/include/: kernel.i  kernelException.i  kernelTools.i
modules/kernel/include/kernel/: IdFactory.hpp  IdMaker.hpp  csvFile.hpp  dataLog.hpp  jafarDebug.hpp  jafarException.hpp  jafarMacro.hpp  jafarTestMacro.hpp  kernelException.hpp  keyValueFile.hpp  misc.hpp  progressBar.hpp  threads.hpp  timingTools.hpp
modules/kernel/macro/: completion.rb  kernel.rb  ticToc.tcl  tools.tcl
modules/kernel/src/: IdFactory.cpp  IdMaker.cpp  csvFile.cpp  dataLog.cpp  jafarDebug.cpp  jafarException.cpp  kernelException.cpp  keyValueFile.cpp  progressBar.cpp  threads.cpp  timingTools.cpp
modules/kernel/src/ruby/: extconf.rb
modules/kernel/test_suite/: test_idfactory.cpp  test_suite_kernel.cpp  test_threads.cpp
modules/lines/: Makefile  README  User.make
modules/lines/doc/: lines.doxy
modules/lines/include/: lines.i  linesException.i  linesTools.i
modules/lines/include/lines/: constPositionKF.hpp  constVelocityKF.hpp  ctdef.hpp  histogram.hpp  lineSegment.hpp  lineSegmentSet.hpp  linesException.hpp  lsExtractor.hpp  lsMisc.hpp  lsPredictor2D.hpp  lsTracker.hpp  matchingSet.hpp
modules/lines/macro/: lines.rb
modules/lines/objs/i686-linux-gnu/: constPositionKF.dep  constVelocityKF.dep  contour1.dep  histogram.dep  lineSegment.dep  lineSegmentSet.dep  linesException.dep  lsExtractor.dep  lsMisc.dep  lsPredictor2D.dep  lsTracker.dep  matchingSet.dep
modules/lines/src/: constPositionKF.cpp  constVelocityKF.cpp  contour1.cpp  histogram.cpp  lineSegment.cpp  lineSegmentSet.cpp  linesException.cpp  lsExtractor.cpp  lsMisc.cpp  lsPredictor2D.cpp  lsTracker.cpp  matchingSet.cpp
modules/lines/src/ruby/: extconf.rb  lines_wrap.cpp
modules/lines/test_suite/i686-linux-gnu/: test_suite_lines.dep
modules/slam2/: Makefile  README  User.make
modules/slam2/doc/: slam.doxy
modules/slam2/doc/maple/: cameraPinhole.mw  eulerTools.mw  facets.mw  feature.mw  feature_sensorFrame.mw  inverseDepthFeature.mw  segmentFeature.mw  stereo.mw
modules/slam2/include/: slam.i  slamException.i  slamTools.i
modules/slam2/include/slam/: MapManagerFactory.hpp  abstractMapManager.hpp  abstractMapObject.hpp  baseFeature.hpp  baseSlam.hpp  basisFeature.hpp  bearingOnlyFeature.hpp  bearingOnlySlam.hpp  dala.hpp  eulerTools.hpp  feature.hpp  featureModel.hpp  full3dPredictModel.hpp  karma.hpp  lineTools.hpp  map3d.hpp  mapManager.hpp  observation.hpp  odo3dPredictModel.hpp  pointFeature.hpp  pointInfFeature.hpp  pointInvDepthFeature.hpp  poseCopy.hpp  robot.hpp  segmentFeature.hpp  segmentInvDepthFeature.hpp  segmentInvDepthInovFeature.hpp  slamEkf.hpp  slamEvents.hpp  slamException.hpp
modules/slam2/macro/: display.tcl  gdhe.tcl  slam.rb
modules/slam2/src/: MapManagerFactory.cpp  abstractMapObject.cpp  baseSlam.cpp  basisFeature.cpp  bearingOnlyFeature.cpp  bearingOnlySlam.cpp  dala.cpp  eulerTools.cpp  feature.cpp  featureModel.cpp  full3dPredictModel.cpp  karma.cpp  lineTools.cpp  map3d.cpp  mapManager.cpp  observation.cpp  odo3dPredictModel.cpp  pointFeature.cpp  pointInfFeature.cpp  pointInvDepthFeature.cpp  robot.cpp  segmentFeature.cpp  segmentInvDepthFeature.cpp  segmentInvDepthInovFeature.cpp  slamEkf.cpp  slamEkfMergeMap.cpp  slamException.cpp
modules/slam2/src/ruby/: extconf.rb
modules/slam2/test_suite/: test_line_tools.cpp  test_list_maps_pose_manager.cpp  test_merge_map.cpp  test_suite_slam.cpp
modules/slamlines2/: Makefile  README  User.make
modules/slamlines2/doc/: slamlines.doxy
modules/slamlines2/include/: slamlines.i  slamlinesException.i  slamlinesTools.i
modules/slamlines2/include/slamlines/: imageSegmentManager.hpp  slamlinesException.hpp
modules/slamlines2/macro/: slamlines.rb
modules/slamlines2/src/: imageSegmentManager.cpp  slamlinesException.cpp
modules/slammm2/: Makefile  README  User.make
modules/slammm2/doc/: slammm.doxy
modules/slammm2/include/: slammm.i  slammmException.i  slammmTools.i
modules/slammm2/macro/: slammm.rb
modules/slammm2/src/: ListMapsPoseManager.cpp  MapsPoseManager.cpp  MergeMapsStrategy.cpp  MultiMapManager.cpp  StartNewMapStrategy.cpp  jacobianEuler.cpp  jacobianEuler.hpp  slammmException.cpp
modules/slampt2/: Makefile  README  User.make
modules/slampt2/doc/: slampt.doxy
modules/slampt2/include/: slampt.i  slamptException.i  slamptTools.i
modules/slampt2/macro/: slampt.rb
modules/slampt2/src/: imagePointManager.cpp  managerTools.cpp  omniImagePointManager.cpp  slamptException.cpp
modules/slamptseg2/: Makefile  README  User.make
modules/slamptseg2/doc/: slamptseg.doxy
modules/slamptseg2/include/: slamptseg.i  slamptsegException.i  slamptsegTools.i
modules/slamptseg2/macro/: slamptseg.rb
modules/slamptseg2/src/: ImagePointSegmentManager.cpp  slamptsegException.cpp
modules/slamseg2/: Makefile  README  User.make
modules/slamseg2/doc/: slamseg.doxy
modules/slamseg2/include/: slamseg.i  slamsegException.i  slamsegTools.i
modules/slamseg2/macro/: slamseg.rb
modules/slamseg2/src/: ImageSegmentManager.cpp  MonoImageSegmentManager.cpp  slamsegException.cpp
modules/slamseg2/test_suite/: test_suite_slamseg.cpp
(+149 files in other folders)
